# cas-lib

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: dependency-scan.yml  linux-pr.yml  macos-pr.yml  owasp-dc.yml  publish-main.yml  windows-pr.yml
docs/: EXAMPLES.md
src/: error.rs  lib.rs
src/asymmetric/: cas_rsa.rs  types.rs
src/compression/: zstd.rs
src/digital_signature/: cas_digital_signature_rsa.rs  sha_256_ed25519.rs  sha_256_rsa.rs  sha_512_ed25519.rs  sha_512_rsa.rs
src/hashers/: blake2.rs  sha.rs
src/http/: mod.rs
src/http/types/: mod.rs  runtime.rs
src/hybrid/: cas_hybrid.rs  hpke.rs
src/key_exchange/: cas_key_exchange.rs  x25519.rs
src/message/: cas_hmac.rs  hmac.rs
src/password_hashers/: argon2.rs  bcrypt.rs  cas_password_hasher.rs  pbkdf2.rs  scrypt.rs
src/pqc/: cas_pqc.rs  ml_kem.rs  slh_dsa.rs
src/signatures/: cas_ed25519.rs  ed25519.rs
src/sponges/: ascon_aead.rs  cas_ascon_aead.rs
src/symmetric/: aes.rs  aes_gcm_siv.rs  cas_symmetric_encryption.rs  chacha20poly1305.rs
tests/: aes_gcm_siv.rs  asymmetric.rs  compression.rs  digital_signatures.rs  hashers.rs  http.rs  hybrid.rs  key_exchange.rs  message.rs  password_hashers.rs  pqc.rs  signatures.rs  sponges.rs  symmetric.rs
tests/common/: mod.rs
tests/data/hmac/: HMAC.txt
tests/data/rsa/: README.md
