[package]
name = "cas-lib"
version = "0.2.55"
edition = "2021"
description = "Core lib for CAS"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
bcrypt = "0.17.0"
blake2 = "0.10.6"
rand = "0.8.5"
rand_chacha = "0.3.1"
rsa = "0.9.6"
scrypt = "0.11.0"
sha3 = "0.10.8"
x25519-dalek = {version = "2.0.0", features = ["static_secrets"]}
ascon-aead = "0.4.2"
rayon = "1.10.0"
hmac = "0.12.1"
sha2 = "0.10.8"
zstd = "0.13"
hpke = "0.12.0"
uuid = { version = "1.10.0", features = ["v4"] }
pbkdf2 = "0.12.2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = "0.12.4"

[profile.dev.package.num-bigint-dig]
opt-level = 3

[build-dependencies]
napi-build = "1"
